# attp-core

./: .gitignore  Cargo.toml  Makefile  README.md  main.py  pyproject.toml  server.py  stress_tester.py  test.py
src/: config.rs  lib.rs
src/attp/: mod.rs  utils.rs
src/attp/client/: client_session.rs
src/attp/server/: transport.rs
src/attp/shared/: command.rs  errors.rs  mod.rs  pyattp_message.rs  session.rs
