[package]
name = "attp-core"
version = "0.2.0"
edition = "2024"

[lib]
name = "attp_core"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.10.1"
num_enum = "0.7.4"
pyo3 = { version = "0.26.0", features = ["experimental-async", "extension-module"] }
pyo3-async-runtimes = { version = "0.26.0", features = ["tokio-runtime"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
